# mlirtoy

./: README.md  shell.nix
scripts/: llvm-project-build.sh  llvm-project-ccb.sh  llvm-project-clean.sh  llvm-project-configure.sh  test-conversion.sh  test-integration.sh  toy-build.sh  toy-ccb.sh  toy-clean.sh  toy-configure.sh  toy-tablegen.sh  toy_lang-build.sh  toy_lang-test.sh
toy/: CMakeLists.txt
toy/include/toy/: CMakeLists.txt
toy/include/toy/Conversion/ToyToStandard/: CMakeLists.txt  ToyToStandard.h  ToyToStandard.td
toy/include/toy/Dialect/Toy/: CMakeLists.txt  ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td  ToyTypes.h  ToyTypes.td
toy/include/toy/Transform/Affine/: AffineFullUnroll.h  CMakeLists.txt  Passes.h  Passes.td
toy/lib/Conversion/: CMakeLists.txt
toy/lib/Conversion/ToyToStandard/: CMakeLists.txt  ToyToStandard.cpp
toy/lib/Dialect/Toy/: CMakeLists.txt  ToyDialect.cpp  ToyOps.cpp
toy/lib/Transform/Affine/: AffineFullUnroll.cpp  CMakeLists.txt
toy/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  test-affine-loop-unroll.mlir  test-constant-folding.mlir  test-ctlz-functional.mlir  test-ctlz-syntactic.mlir  test-ctlz.mlir  test-toy-syntax.mlir
toy/tools/: CMakeLists.txt  toy-opt.cpp
toy_lang/: Cargo.toml
toy_lang/src/: codegen.rs  lib.rs  main.rs  parser.rs  types.rs
toy_lang/test/: swap.mlir
toy_lang/tests/: add.mlir  add.toy  branch.mlir  branch.toy  fib.mlir  recurse.mlir  recurse.toy  swap.mlir  swap.toy  test.rs
